--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.3",
+    "fullcalendar": "^6.1.7",
     "jquery.js": "^0.0.2-security",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
