--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.3",
     "fullcalendar": "^6.1.7",
+    "hammerjs": "^2.0.8",
     "jquery.js": "^0.0.2-security",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
