--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fullcalendar/angular": "^6.1.7",
+    "@fullcalendar/daygrid": "^6.1.7",
+    "@fullcalendar/multimonth": "^6.1.7",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.3",
     "fullcalendar": "^6.1.7",
