--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "node_modules/alertifyjs/build/css/alertify.min.css",
-              "node_modules/alertifyjs/build/css/themes/default.min.css"
+              "node_modules/alertifyjs/build/css/themes/default.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [ "node_modules/alertifyjs/build/alertify.min.js","node_modules/popper.js/dist/umd/popper.min.js","node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
