--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/multimonth": "^6.1.7",
     "alertifyjs": "^1.13.1",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "fullcalendar": "^6.1.7",
     "hammerjs": "^2.0.8",
     "jquery.js": "^0.0.2-security",
+    "notiflix": "^3.2.6",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
