--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@angular/service-worker": "^15.2.0",
     "@fullcalendar/angular": "^6.1.7",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/multimonth": "^6.1.7",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0",
+    "firebase": "^9.22.2",
     "fullcalendar": "^6.1.7",
     "hammerjs": "^2.0.8",
     "jquery.js": "^0.0.2-security",
