--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^9.22.2",
     "fullcalendar": "^6.1.7",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.7.0",
     "jquery.js": "^0.0.2-security",
     "notiflix": "^3.2.6",
     "popper.js": "^1.16.1",
